<?xml version="1.0"?>
<package format="3">
  <name>arm_interfaces</name>
  <version>1.0.0</version>
  <description>Custom ROS2 messages for 6-DOF arm control</description>
  <maintainer email="arm@robot.local">Arm Developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 
